--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist/server.js"
+    "start": "node dist/index.js"
   },
   "dependencies": {
     "chalk": "^5.4.1",
+    "console.table": "^0.10.0",
     "dotenv": "^16.4.5",
     "figlet": "^1.8.0",
     "inquirer": "^12.3.0",
@@ -20,6 +21,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/figlet": "^1.7.0",
     "@types/inquirer": "^9.0.7",
     "@types/node": "^22.10.4",
     "@types/pg": "^8.11.10",
